Adicionando imagem na Home

--- a/public/app/components/home/homeView.html
+++ b/public/app/components/home/homeView.html
@@ -1,6 +1,7 @@
 <!-- public/views/home.html -->
 <div class="jumbotron text-center">
 	<div class="container">
+		<img src="../../../assets/img/logo.jpeg" height="200" width="200" alt="Logomarca" class="img-circle">
 		<h1>KoalaQA</h1>
 		<p>Quality Assurance Software</p>
 		<p> {{tagline}} </p>
