--- a/public/app/components/projeto/projetoView.html
+++ b/public/app/components/projeto/projetoView.html
@@ -1,20 +1,27 @@
 <!-- public/views/projetos.html -->
-<div class="jumbotron text-center">
-	<h1>Projetos</h1>
-	<p>Lista de Projetos</p>	
+<div class="jumbotron">
+	<div class="container">
+		<h2>Projetos</h2>
+	</div>
 </div>
 
 <div class="container">
-	<table class="table table-hover table-striped">
-		<thead>
-			<tr>
-				<td>Projeto</td>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="projeto in projetos.lista">
-				<td> {{projeto.nome}} </td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<table class="table table-hover table-striped">
+					<thead>
+						<tr>
+							<td><strong>Projeto</strong></td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="projeto in projetos.lista">
+							<td> {{projeto.nome}} </td>
+						</tr>
+					</tbody>
+				</table>		
+			</div>
+		</div>
+	</div>
 </div>
