--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,15 @@
 @charset "UTF-8";
+
+.panel a {
+	color: #000;
+	text-decoration: underline;
+}
+
+.panel a:hover {
+	color: black;
+	text-decoration: overline;
+}
+
+.inline.help-block {
+	display: inline;
+}
