--- a/public/app/components/projeto/projeto-form-view.html
+++ b/public/app/components/projeto/projeto-form-view.html
@@ -10,8 +10,12 @@
 					<label for="nome-projeto">Nome</label> 
 					<span class="inline help-block" ng-show="projetoForm.nome.$error.required"><i class="fa fa-warning"></i> Nome Obrigatório
 					</span>
-					<input type="text" class="form-control" id="nome-projeto" name="nome" ng-model="projetos.projeto.nome" required>
+					<input autofocus type="text" class="form-control" id="nome-projeto" name="nome" ng-model="projetos.projeto.nome" required>
 				</div>
+
+				<div class="form-group"><button class="btn btn-default">
+					Associar Fase
+				</button></div>
 
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary" ng-click="projetos.salvar()" ng-disabled="projetoForm.$invalid">Salvar</button>
